src/objects/cspmb__Rate_Card__c.object
<CustomObject>
    <description>Describes a Rate Card. Can be used in association with a Price Item or standalone. If linked to an Account, it is only available for use by that Account.</description>
    <fields>
        <fullName>Price_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Item</label>
        <referenceTo>cspmb__Price_Item__c</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Authorization_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Level</label>
        <referenceTo>cspmb__Authorization_Level__c</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Authorization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Authorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Product_Definition_Name__c</fullName>
        <label>Product Definition Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMPF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Rate_Card_Code__c</fullName>
        <label>Rate Card Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>cspmb__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>